fix mobile style spacing btw home icons, added home link to 404 icon

--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ span { font-size: 20px; }
   p { font-size: 15px; }
   .item {
     width: 100px;
-    margin: 50px 10px;
+    margin: 30px 10px;
   }
   .subitem { width: inherit; }
   .overlay-content, .overlay-content2 {
@@ -275,7 +275,7 @@ span { font-size: 20px; }
   p { font-size: 14px; }
   .item {
     width: 75px;
-    margin: 45px 7.5px;
+    margin: 25px 7.5px;
   }
   .subitem { margin: 7.5px; }
   #dir {
